# fact_frenzy

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci-cd-pipeline.yml
docs/workflows/: ci-cd-pipeline.yml
src/: fact_frenzy.py  logger.py  trivia_api.py  utils.py
tests/: test_trivia_api.py
