[tool.poetry]
name = "fact-frenzy"
version = "0.1.0"
description = "Q fact frenzy quiz"
authors = ["MightContainNuts <mightcontainnuts@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.4"
requests = "^2.32.3"
pytest-cov = "^6.0.0"
pytest-sugar = "^1.0.0"
behave = "^1.2.6"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
